# jsonapi_core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
acceptance/: Cargo.toml
acceptance/src/: lib.rs
acceptance/tests/: rich_article.rs
acceptance/tests/fixtures/: rich_article.json
docs/: SUMMARY.md  atomic-operations.md  book.toml  content-negotiation.md  cookbook.md  defining-resources.md  derive-macro-reference.md  documents-and-resources.md  error-handling.md  feature-flags.md  getting-started.md  include-validation.md  installation.md  introduction.md  member-name-validation.md  query-builder.md  registry-and-resolver.md  relationships.md  sparse-fieldsets.md
jsonapi_core/: Cargo.toml
jsonapi_core/examples/: atomic_operations.rs  basic_deserialize.rs  basic_serialize.rs  content_negotiation.rs  dynamic_resource.rs  query_builder.rs
jsonapi_core/src/: error.rs  fieldset.rs  lib.rs  query.rs  registry.rs  type_registry.rs
jsonapi_core/src/atomic/: mod.rs  operation.rs  result.rs
jsonapi_core/src/case/: config.rs  mod.rs
jsonapi_core/src/media_type/: mod.rs  negotiation.rs  parser.rs
jsonapi_core/src/model/: accessors.rs  document.rs  error.rs  identifier.rs  jsonapi_object.rs  link.rs  meta.rs  mod.rs  relationship.rs  resource.rs
jsonapi_core/src/validation/: member_name.rs  mod.rs
jsonapi_core/tests/: accessor_traits.rs  compile_fail.rs  m1_compliance.rs  m2_query_builder.rs  m3_derive.rs  m5_fieldset.rs  m6_atomic.rs  round_trip.rs  typed_parse_errors.rs
jsonapi_core/tests/compile_fail/: conflicting_annotations.rs  conflicting_annotations.stderr  duplicate_id.rs  duplicate_id.stderr  duplicate_lid.rs  duplicate_lid.stderr  duplicate_links.rs  duplicate_links.stderr  duplicate_meta.rs  duplicate_meta.stderr  enum_input.rs  enum_input.stderr  has_links_not_impl.rs  has_links_not_impl.stderr  invalid_case.rs  invalid_case.stderr  invalid_type_name.rs  invalid_type_name.stderr  missing_id.rs  missing_id.stderr  missing_type.rs  missing_type.stderr  non_string_id.rs  non_string_id.stderr  tuple_struct.rs  tuple_struct.stderr  type_on_non_relationship.rs  type_on_non_relationship.stderr  unknown_attr.rs  unknown_attr.stderr
jsonapi_core_derive/: Cargo.toml  README.md
jsonapi_core_derive/src/: codegen.rs  lib.rs  parse.rs  validate.rs
