[workspace]
members = [
    "jsonapi_core",
    "jsonapi_core_derive",
    "acceptance",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rankitbishnoi/jsonapi_core"

[workspace.lints.rust]
unsafe_code = "forbid"
