[package]
name = "acceptance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
jsonapi_core = { path = "../jsonapi_core" }
jsonapi_core_derive = { path = "../jsonapi_core_derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
