[package]
name = "jsonapi_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A typed JSON:API v1.1 serialization library for Rust"
keywords = ["jsonapi", "json-api", "serialization", "rest", "api"]
categories = ["encoding", "web-programming"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
percent-encoding = "2"
heck = "0.5"

# Derive macro re-export (default feature)
jsonapi_core_derive = { path = "../jsonapi_core_derive", version = "0.2.0", optional = true }

[features]
default = ["derive"]
derive = ["dep:jsonapi_core_derive"]
atomic-ops = []

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[lints]
workspace = true
